--- a/style.css
+++ b/style.css
@@ -47,7 +47,7 @@ button {
     font-weight: bold;
     cursor: pointer;
 }
-@media and (max-width:400px) {
+@media screen and (max-width:400px) {
     img {
         height: 300px;
         width: 300px;
@@ -57,4 +57,5 @@ button {
 button:hover {
     transform: scale(1.1, 1.1);
 }
+
 
