--- a/style.css
+++ b/style.css
@@ -53,7 +53,7 @@ button {
         width: 350px;
     }
 }
-@media (max-width:400px) {
+@media (max-width:450px) {
     img {
         height: 200px;
         width: 200px;
@@ -78,12 +78,18 @@ button {
         height: 125px;
         width: 125px;
     }
+    @media (max-width:300px) {
+    img {
+        height: 150px;
+        width: 150px;
+    }
 }
 
 
 button:hover {
     transform: scale(1.1, 1.1);
 }
+
 
 
 
