--- a/style.css
+++ b/style.css
@@ -47,6 +47,14 @@ button {
     font-weight: bold;
     cursor: pointer;
 }
+ @media (max-width:1050px) {
+    img {
+        height: 425px;
+        width: 425px;
+    }
+    #container > h3 {
+        margin-bottom:10px;
+}
 @media (max-width:950px) {
     img {
         height: 350px;
@@ -61,8 +69,8 @@ button {
 }
 @media (max-width:900px) {
     img {
-        height: 400px;
-        width: 400px;
+        height: 350px;
+        width: 350px;
     }
     #container {
         margin-bottom:10px;
@@ -83,13 +91,13 @@ button {
 }
 @media (max-width:250px) {
     img {
-        height: 125px;
-        width: 125px;
+        height: 150px;
+        width: 150px;
     }
     @media (max-width:300px) {
     img {
-        height: 150px;
-        width: 150px;
+        height: 175px;
+        width: 175px;
     }
 }
 
@@ -97,6 +105,7 @@ button {
 button:hover {
     transform: scale(1.1, 1.1);
 }
+
 
 
 
