--- a/style.css
+++ b/style.css
@@ -47,12 +47,12 @@ button {
     font-weight: bold;
     cursor: pointer;
 }
- @media (max-width:1050px) {
+ @media (max-width:1040px) {
     img {
         height: 425px;
         width: 425px;
     }
-    #container > h3 {
+    #container {
         margin-bottom:10px;
 }
 @media (max-width:950px) {
@@ -105,6 +105,7 @@ button {
 button:hover {
     transform: scale(1.1, 1.1);
 }
+
 
 
 
